# pygameclientserver

./: LICENSE  README.md  client.py  pyproject.toml  run_game.sh  server.py
